--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="https://codepen.io/parguello/full/VPKeBL/"><img class="card-img-top" src="imgs/PomodoroClock.png" alt="" width="300px" height="200px"></a>
+            <a href="https://codepen.io/parguello/full/VPKeBL/"><img class="card-img-top" src="imgs/PomodoroClock.PNG" alt="" width="300px" height="200px"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="https://codepen.io/parguello/full/VPKeBL/">Pomodoro Clock</a>
