--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	  <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4 portfolio-item">
           <div class="card h-100">
-            <a href="https://github.com/parguello/myCRUDApp"><img class="card-img-top" src="imgs/myCRUDApp.png" alt="" width="300px" height="200px"></a>
+            <a href="https://github.com/parguello/myCRUDApp"><img class="card-img-top" src="imgs/MyCRUDApp.png" alt="" width="300px" height="200px"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="https://github.com/parguello/myCRUDApp">Simple CRUD App</a>
